# transcriber

./: .gitignore  README.md  config.yaml  pyproject.toml  video_to_text.py
docs/: index.md
instructions/: guitar.md  japanese.md  trade.md  trade_refine.md  turn_to_docs.md  useless.md
output/: 05_-_Internal_Range_vs._External_Range_Liquidity_Aggregation.md  06_-_Failure_Swings_and_False_Breaks.md  07_-_LG_Reversals.md  08_-_Backtesting_101.md  Live_Tape_Reading_July_30th_2024_xFJseyHDVBU.md  Top-Down_Analysis_and_Backtesting_Hacks_At3zVdidYig.md
tests/: test_config.py  test_file_handler.py  test_refinement_processing.py  test_token_utils.py  test_transcription.py
transcriber/: __main__.py  api_utils.py  audio_processing.py  claude_processing.py  config.py  exceptions.py  file_handler.py  file_utils.py  refinement_processing.py  token_utils.py  transcription.py  video_processing.py
