[tool.poetry]
name = "video-to-text"
version = "0.1.0"
description = "A CLI tool to convert video files to text transcriptions using FFmpeg and OpenAI's Whisper API"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.3.0"
pydub = "^0.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"